# pokeemerald_web

./: .gitignore  AGENTS.md  README.md
docs/: rebuild-development-paths.md
gTileset_General__gTileset_Cave/: metatiles.json
gTileset_General__gTileset_Dewford/: atlas.json  metatiles.json
gTileset_General__gTileset_Fallarbor/: atlas.json  palettes.json
gTileset_General__gTileset_InsideOfTruck/: atlas.json  metatiles.json  palettes.json
gTileset_General__gTileset_InsideShip/: atlas.json
rebuild/: ARCHITECTURE.md  ASSET_POLICY.md  README.md
rebuild/assets/: layouts_index.json  maps_index.json
rebuild/assets/field_effects/: acro_bike_effects_manifest.json
rebuild/assets/layouts/: LAYOUT_ANCIENT_TOMB.json  (+440 more)
rebuild/client/: README.md  index.html  package-lock.json  package.json  tsconfig.json
rebuild/docs/: README.md  protocol.md
rebuild/server/: Cargo.toml  README.md
rebuild/server/src/: acro.rs  bike.rs  lib.rs  main.rs  map_chunk.rs  movement.rs  protocol.rs  protocol_generated.rs  session.rs  world.rs
rebuild/server/tests/: acro_puzzle_fixtures.rs  bike_replay_fixtures.rs  connection_boundary_fixtures.rs  map_policy_parity.rs  movement_timing.rs  protocol_compat.rs  replay_fixtures.rs  world_input_queue.rs  world_traversal_transitions.rs  world_walk_results.rs
rebuild/shared/: README.md  generate_protocol_bindings.py  mapgrid.py  protocol.py
rebuild/tools/: README.md
rebuild/v2/: README.md
rebuild/v2/server/: Cargo.toml
rebuild/v2/server/src/: camera_wheel.rs  lib.rs  main.rs  map_runtime.rs  movement.rs  render_assets.rs  render_state.rs
(+396 files in other folders)
